# WhisperLiveKit

./: Dockerfile.cpu  README.md  build.sh  pyproject.toml
whisperlivekit/: __init__.py  audio_processor.py  basic_server.py  cuemate_logger.py  results_formater.py  timed_objects.py  warmup.py
whisperlivekit/diarization/: diart_backend.py  sortformer_backend.py  sortformer_backend_offline.py
whisperlivekit/simul_whisper/: backend.py  simul_whisper.py
whisperlivekit/web/: live_transcription.css
whisperlivekit/whisper_streaming_custom/: backends.py  online_asr.py  whisper_online.py
